test/should-fail/vsgc4173d.visage
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=interpolate
 * @compile vsgc4173sub.visage
 * @test/warning
 */
